Fix overflow problems, #5

--- a/src/app/components/forms/index.styl
+++ b/src/app/components/forms/index.styl
@@ -1,6 +1,4 @@
 form
-    text-align center
-
     input
         padding 5px
         margin 5px 0
@@ -11,7 +9,11 @@ form
 .playlists-form
     input
         width calc(100% - 24px)
-        margin-right 10px
+
+    a
+        display inline-block
+        width 24px
+        text-align right
 
 
 .filter-form
